kubernetes/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: posts-service
  labels:
    name: posts-service
