kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-service-deployment
  namespace: posts-service
  labels:
    app: posts-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: posts-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: posts-service
    spec:
      containers:
        - name: posts-service
          image: gigo123/posts-service:latest
          ports:
            - containerPort: 80
