kubernetes/stateful-set.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: posts-service
  name: posts-service-mongodb
spec:
  serviceName: posts-service
  selector:
    matchLabels:
      db: posts-service-mongodb
  template:
    metadata:
      labels:
        db: posts-service-mongodb
    spec:
      containers:
        - name: posts-service-mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: posts-service-mongodb-volume
              mountPath: /data/db
      volumes:
        - name: posts-service-mongodb-volume
          persistentVolumeClaim:
            claimName: posts-service-mongodb-pvc
