kubernetes/posts-service-mongodb-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: posts-service-mongodb
  namespace: posts-service
spec:
  selector:
    db: posts-service-mongodb
  ports:
    - protocol: TCP
      port: 27017
