kubernetes/posts-service-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: posts-service
  namespace: posts-service
spec:
  selector:
    app: posts-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
