kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: posts-service-ingress
spec:
  rules:
    - host: yourdomain.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: posts-service
                port:
                  number: 8000
